# flippity-flappity

./: Cargo.toml  Makefile  README.md
src/: main.rs
wasm/: flippity-flappity.js  flippity-flappity_bg.wasm  index.html
