[package]
name = "flippity-flappity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.45"
bracket-lib = { git="https://github.com/amethyst/bracket-lib.git" }

[profile.release]
lto = "thin"